--- a/index.html
+++ b/index.html
@@ -1,12 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="assets/logo/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Delani</title>
 </head>
 <body>
-  
+    <main>
+        <section id="home">
+            <img src="assets/logo/logo.png" alt="delani">
+            <h1>Welcome<br>to delani studio</h1>
+            <h2>amazing people are making amazing designs in a fun environment</h2>
+            <svg aria-hidden="true" role="img" viewBox="0 0 16 16"><path fill="currentColor" d="M8 3a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 3zm4 8a4 4 0 0 1-8 0V5a4 4 0 1 1 8 0v6zM8 0a5 5 0 0 0-5 5v6a5 5 0 0 0 10 0V5a5 5 0 0 0-5-5z"/></svg>
+        </section>
+
+        <section id="about">
+            <h3>About US</h3>
+            <p>When you work with us, you are part of a team of committed collaborators. All aspects of our software development process are integrated, interactive, and agile. <br>Our approach unifies design, development, and product management to create exceptional products <br>We start each project by understanding your business goals, the user's needs, and the product requirements, then we help translate then into effective and elegant solutions.</p>
+        </section>
+
+        <section id="services">
+            <h3>Services</h3>
+            <p>Before we sign a contract or write a line of code, our team will spend the necessary needed to understand your product vision. The outcome of this scoping session is a proposal or a high-level statement of work.<br>Based on our requirement, we can provide a complete work or just the parts your need</p>
+        </section>
+
+        <section id="what-we-do">
+            <h3>What we do</h3>
+            <div class="s-container">
+                <div class="service">
+                    <div class="default a">
+                        <img src="assets/services_icons/design_icon.png" alt="">
+                        <h3>design</h3>
+                    </div>
+                    <div class="description a">
+                        <h3>design</h3>
+                        <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing. Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
+                    </div>
+                </div>
+                <div class="service">
+                    <div class="default b">
+                        <img src="assets/services_icons/dev_icon.png" alt="">
+                        <h3>development</h3>
+                    </div>
+                    <div class="description b">
+                        <h3>development</h3>
+                        <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+                    </div>
+                </div>
+                <div class="service">
+                    <div class="default c">
+                        <img src="assets/services_icons/product_icon.png" alt="">
+                        <h3>product<br>development</h3>
+                    </div>
+                    <div class="description c">
+                        <h3>product<br>development</h3>
+                        <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. This iterative process allows for changes as business requirements evolve.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="portfolio">
+            <h3>Portfolio</h3>
+            <div class="items">
+                <div class="item">
+                    <img src="assets/portfolio/work1.jpg" alt="work1">
+                    <div class="text-box one">
+                        <p>News<br>App</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="assets/portfolio/work2.jpg" alt="work2">
+                    <div class="text-box two">
+                        <p>Abstract</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="assets/portfolio/work3.jpg" alt="work3">
+                    <div class="text-box three">
+                        <p>Ontario<br>Security</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="assets/portfolio/work4.jpg" alt="work4">
+                    <div class="text-box four">
+                        <p>Textured<br>Background</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="assets/portfolio/work5.jpg" alt="work5">
+                    <div class="text-box five">
+                        <p>Travel<br>Site</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="assets/portfolio/work6.jpg" alt="work6">
+                    <div class="text-box six">
+                        <p>Neomorphism</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="assets/portfolio/work7.jpg" alt="work7">
+                    <div class="text-box seven">
+                        <p>Burned<br>Logo</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="assets/portfolio/work8.jpg" alt="work8">
+                    <div class="text-box eight">
+                        <p>Graphine<br>Logo</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact">
+            <h3>Contact Us</h3>
+            <form action="https://moringaschool.us14.list-manage.com/subscribe/post?u=139041ab99fc1aed10b1522b2&amp;id=eb870a3a66" method="post"  id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"  >
+                <div class="info">
+                    <input type="text" name="FNAME" id="name" placeholder="Name . . . ">
+                    <input type="email" name="EMAIL" id="email" placeholder="Email . . ."> 
+                </div>
+                <textarea name="MMERGE3" id="message" placeholder="Text here . . ."></textarea>
+                <input type="submit" name="subscribe" id="mc-embedded-subscribe" value="Send">
+            </form>
+            <div class="successful">
+                <h3>Message Sent!</h3>
+                <p>Thank you for contacting Delani</p>
+                <button class="dismiss">
+                    ok
+                </button>
+            </div>
+        </section>
+
+        <footer>
+            <div class="icons">
+                <img src="assets/social_icons/twitter.png" alt="twitter">
+                <img src="assets/social_icons/dribble.png" alt="dribble">
+                <img src="assets/social_icons/facebook.png" alt="facebook">
+                <img src="assets/social_icons/g_plus.png" alt="g-plus">
+                <img src="assets/social_icons/skype.png" alt="skype">
+                <img src="assets/social_icons/stumble_upon.png" alt="stumble">
+                <img src="assets/social_icons/behance.png" alt="behance">
+                <img src="assets/social_icons/pinterest.png" alt="youtube">
+                <img src="assets/social_icons/flickr.png" alt="flicker">
+            </div>
+            <div class="copyright">
+                <h3>Delani</h3>
+                <p>&copy;  <span class="current-year"></span></p>
+            </div>
+        </footer>
+    </main>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="./js/scripts.js"></script>
 </body>
 </html>
