style:styling update; update on project styling to meet project requirements

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <input type="text" name="FNAME" id="name" placeholder="Name . . . ">
                     <input type="email" name="EMAIL" id="email" placeholder="Email . . ."> 
                 </div>
-                <textarea name="MMERGE3" id="message" placeholder="Text here . . ."></textarea>
+                <textarea name="msg" id="message" placeholder="Text here . . ."></textarea>
                 <input type="submit" name="subscribe" id="mc-embedded-subscribe" value="Send">
             </form>
             <div class="successful">
